--- a/src/views/content-add/content-add.html
+++ b/src/views/content-add/content-add.html
@@ -1,63 +1,103 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>밈장고</title>
-    <script src="/content-add/content-add.js" type="module"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
-    <link rel="stylesheet" href="/footer/footer.css">
-    <link rel="stylesheet" href="/content-add/content-add.css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <script src="/nav/nav.js" type="module"></script>
-    <link rel="stylesheet" href="/nav/nav.css">
-</head>
-<body>
-    <!-- navigation bar -->
-    <div id="nav-placeholder"></div>
-    
+<!doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>밈장고</title>
+        <script src="/content-add/content-add.js" type="module"></script>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+        />
+        <link rel="stylesheet" href="/footer/footer.css" />
+        <link rel="stylesheet" href="/content-add/content-add.css" />
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script
+            defer
+            src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+        ></script>
+        <script src="/nav/nav.js" type="module"></script>
+        <link rel="stylesheet" href="/nav/nav.css" />
+    </head>
+    <body>
+        <!-- navigation bar -->
+        <div id="nav-placeholder"></div>
 
-    <!-- Content ... -->
-    <div class="content-upload-container">
-        <form class="box" id="content-upload-form" enctype="multipart/form-data">
-            <div class="field">
-                <label class="label" for="content-img">
-                    <p>사진업로드</p>
-                    <input class="input" type="file" id="content-img" name="src" accept=".png, .jpeg, .jpg">
-                </label>                    
-                <img src="" id="image-preview">
-            </div>
-            
-            <div class="field">
-                <label class="label" for="content-name">
-                    <p>제목</p>
-                    <input class="input" type="text" id="content-name" name="name" placeholder="제목을 입력해주세요">
-                </label>
-            </div>
-            <div class="field">
-                <label class="label" for="content-tag">
-                    <p>태그</p>
-                    <input class="input" type="text" id="content-tag" name="tag" placeholder="공백을 기준으로 여러개 입력">
-                </label>
-                <hr>
-                <h3 id="login-check"></h3>
-                <label class="label" for="content-uploader-name">
-                    <p>아이디</p>
-                    <input class="input" type="text" id="uploader-name" name="uploaderName" placeholder="4~10자리, 특수문자 및 공백 금지">
-                </label>
-                <label class="label" for="content-uploader-password">
-                    <p>비밀번호</p>
-                    <input class="input" type="password" id="uploader-password" name="uploaderPassword" placeholder="4~10자리, 특수문자 및 공백 금지">
-                </label>
-            </div>
-            <button class="button is-success">업로드</button>
-        </form>
-    </div>
+        <!-- Content ... -->
+        <div class="content-upload-container">
+            <form
+                class="box"
+                id="content-upload-form"
+                enctype="multipart/form-data"
+            >
+                <div class="field">
+                    <label class="label" for="content-img">
+                        <p>사진업로드</p>
+                        <input
+                            class="input"
+                            type="file"
+                            id="content-img"
+                            name="src"
+                            accept=".png, .jpeg, .jpg"
+                        />
+                    </label>
+                    <img src="" id="image-preview" />
+                </div>
 
-    <!-- footer -->
-    <div id="footer-placeholder"></div>
-    
-    <script>
-        $('#footer-placeholder').load('/footer/footer.html');
-    </script>
-</body>
+                <div class="field">
+                    <label class="label" for="content-name">
+                        <p>제목</p>
+                        <input
+                            class="input"
+                            type="text"
+                            id="content-name"
+                            name="name"
+                            placeholder="제목을 입력해주세요"
+                        />
+                    </label>
+                </div>
+                <div class="field">
+                    <label class="label" for="content-tag">
+                        <p>태그</p>
+                        <input
+                            class="input"
+                            type="text"
+                            id="content-tag"
+                            name="tag"
+                            placeholder="공백을 기준으로 여러개 입력"
+                        />
+                    </label>
+                    <hr />
+                    <h3 id="login-check"></h3>
+                    <label class="label" for="content-uploader-name">
+                        <p>아이디</p>
+                        <input
+                            class="input"
+                            type="text"
+                            id="uploader-name"
+                            name="uploaderName"
+                            placeholder="4~10자리, 특수문자 및 공백 금지"
+                        />
+                    </label>
+                    <label class="label" for="content-uploader-password">
+                        <p>비밀번호</p>
+                        <input
+                            class="input"
+                            type="password"
+                            id="uploader-password"
+                            name="uploaderPassword"
+                            placeholder="4~10자리, 특수문자 및 공백 금지"
+                        />
+                    </label>
+                </div>
+                <button class="button is-success">업로드</button>
+            </form>
+        </div>
+
+        <!-- footer -->
+        <div id="footer-placeholder"></div>
+
+        <script>
+            $('#footer-placeholder').load('/footer/footer.html');
+        </script>
+    </body>
 </html>
