--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -1,39 +1,46 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>상세보기 페이지</title>
-    <script src="./detail.js" type="module"></script>
-    <link rel="stylesheet" href="../detail/detail.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
-    <link rel="stylesheet" href="/footer/footer.css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link rel="stylesheet" href="/nav/nav.css">
-    <script src="/nav/nav.js" type="module" defer></script>
-</head>
-<body>
-    <!-- navigation bar -->
-    <div id="nav-placeholder"></div>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>상세보기 페이지</title>
+        <script src="./detail.js" type="module"></script>
+        <link rel="stylesheet" href="../detail/detail.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+        />
+        <link rel="stylesheet" href="/footer/footer.css" />
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script
+            defer
+            src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+        ></script>
+        <link rel="stylesheet" href="/nav/nav.css" />
+        <script src="/nav/nav.js" type="module" defer></script>
+    </head>
+    <body>
+        <!-- navigation bar -->
+        <div id="nav-placeholder"></div>
 
-    <!-- content detail -->
-    <div id="detail-content-container" class="container is-widescreen">
-        <div id="content-container">
-            <h1 id="detail-title"></h1>
-            <img id ='detail-img'>
-            <div id="detail-desc"></div>
-            <div id="content-view-container">
-                <span class="icon">
-                    <i class="far fa-eye"></i>
-                </span>
-                <span id="content-view"></span>
+        <!-- content detail -->
+        <div id="detail-content-container" class="container is-widescreen">
+            <div id="content-container">
+                <h1 id="detail-title"></h1>
+                <img id="detail-img" />
+                <div id="detail-desc"></div>
+                <div id="content-view-container">
+                    <span class="icon">
+                        <i class="far fa-eye"></i>
+                    </span>
+                    <span id="content-view"></span>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- footer -->
-    <div id="footer-placeholder"></div>
-    <script>
-    $('#footer-placeholder').load('/footer/footer.html');
-    </script>
-</body>
+        <!-- footer -->
+        <div id="footer-placeholder"></div>
+        <script>
+            $('#footer-placeholder').load('/footer/footer.html');
+        </script>
+    </body>
 </html>
