--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -1,8 +1,8 @@
 #login-form-container {
     height: 60vh;
-    text-align: center;    
+    text-align: center;
     margin-top: 8%;
-  }
+}
 
 .login-form .login-greeting {
     text-align: center;
@@ -10,17 +10,16 @@
     color: #4a4f5a;
     margin-top: 2vh;
 }
-.login-form{
+.login-form {
     width: 28rem;
     margin: auto;
     margin-top: 5vh;
 }
 
 .login-form .input:focus {
-    border-color: hsl(171,100%,41%);
+    border-color: hsl(171, 100%, 41%);
     box-shadow: 0 0 0 0.125em hsl(171, 100%, 43%);
 }
-
 
 .login-form .field {
     display: flex;
@@ -34,7 +33,6 @@
     color: #4a4f5a;
 }
 
-
-#login-submit-button{
+#login-submit-button {
     margin-top: 5vh;
 }
