--- a/src/views/search/search.html
+++ b/src/views/search/search.html
@@ -1,34 +1,40 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>밈장고</title>
-    <script src="/search/search.js" type="module"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
-    <link rel="stylesheet" href="/footer/footer.css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <script src="/nav/nav.js" type="module"></script>
-    <link rel="stylesheet" href="/nav/nav.css">
-</head>
-<body>
-    <!-- navigation bar -->
-    <div id="nav-placeholder"></div>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>밈장고</title>
+        <script src="/search/search.js" type="module"></script>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+        />
+        <link rel="stylesheet" href="/footer/footer.css" />
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script
+            defer
+            src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+        ></script>
+        <script src="/nav/nav.js" type="module"></script>
+        <link rel="stylesheet" href="/nav/nav.css" />
+    </head>
+    <body>
+        <!-- navigation bar -->
+        <div id="nav-placeholder"></div>
 
-    <!-- search contents -->
-    <div class="search-page-container" class="container is-widescreen">
-        <div id="all-content-title-box" class="box">검색 결과</div>
-        <div id="all-content-container">
-            <div id="all-contents"></div>
+        <!-- search contents -->
+        <div class="search-page-container" class="container is-widescreen">
+            <div id="all-content-title-box" class="box">검색 결과</div>
+            <div id="all-content-container">
+                <div id="all-contents"></div>
+            </div>
         </div>
-    </div>
-    <!-- footer -->
-    <div id="footer-placeholder"></div>
+        <!-- footer -->
+        <div id="footer-placeholder"></div>
 
-    <script>
-        $('#nav-placeholder').load('/nav/nav.html');
-        $('#footer-placeholder').load('/footer/footer.html');
-    </script>
-    <link rel="stylesheet" href="/search/search.css">
-    
-</body>
+        <script>
+            $('#nav-placeholder').load('/nav/nav.html');
+            $('#footer-placeholder').load('/footer/footer.html');
+        </script>
+        <link rel="stylesheet" href="/search/search.css" />
+    </body>
 </html>
