[추가]navbar에 buzzword 추가

--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -40,7 +40,21 @@
                     <button
                         class="button is-white"
                         id="content-upload-button"
-                        onclick="location.href='/content-add/content-add.html'"
+                        onclick="location.href='/buzzword'"
+                    >
+                        <span class="icon">
+                            <i class="fas fa-book"></i>
+                        </span>
+                        <span>유행어</span>
+                    </button>
+                </p>
+            </div>
+            <div class="navbar-item">
+                <p class="control">
+                    <button
+                        class="button is-white"
+                        id="content-upload-button"
+                        onclick="location.href='/content-add'"
                     >
                         <span class="icon">
                             <i class="fas fa-plus"></i>
