[수정]우측에서 좌측으로, 짤과 유행어 내비게이션 추가

--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -12,6 +12,8 @@
             <span></span>
             <span></span>
         </a>
+        <a class="navbar-item" href="/main">짤</a>
+        <a class="navbar-item" href="/buzzword">유행어</a>
     </div>
     <div class="navbar-item search-section">
         <form id="search-container">
@@ -35,20 +37,6 @@
 
     <div id="main-navbar" class="navbar-menu">
         <div class="navbar-end">
-            <div class="navbar-item">
-                <p class="control">
-                    <button
-                        class="button is-white"
-                        id="content-upload-button"
-                        onclick="location.href='/buzzword'"
-                    >
-                        <span class="icon">
-                            <i class="fas fa-book"></i>
-                        </span>
-                        <span>유행어</span>
-                    </button>
-                </p>
-            </div>
             <div class="navbar-item">
                 <p class="control">
                     <button
