[추가]더보기 버튼 추가, inline style 제거

--- a/src/views/buzzword/buzzword.html
+++ b/src/views/buzzword/buzzword.html
@@ -32,73 +32,12 @@
                 id="buzzword-content-container"
                 class="container is-widescreen"
             >
-                <div id="buzzword-container" class="box">
-                    <hr />
-                    <span
-                        class="buzzword-wrapper"
-                        onclick="if(buzzword_desc1.style.display == 'none')
-                    {buzzword_desc1.style.display = '';}
-                    else{buzzword_desc1.style.display = 'none';}"
-                    >
-                        <span id="buzzword-name" class="buzzword">제목</span>
-
-                        <span id="buzzword-tags" class="buzzword"
-                            >태그1 태그2 태그3</span
-                        >
-                    </span>
-                    <div>
-                        <span
-                            id="buzzword_desc1"
-                            class="buzzword"
-                            style="display: none"
-                            >유행어에 대한 설명입니다 ㅎㅎ;</span
-                        >
-                    </div>
-                    <hr />
-                    <span
-                        class="buzzword-wrapper"
-                        onclick="if(buzzword_desc2.style.display == 'none')
-                    {buzzword_desc2.style.display = '';}
-                    else{buzzword_desc2.style.display = 'none';}"
-                    >
-                        <span id="buzzword-name" class="buzzword">제목</span>
-
-                        <span id="buzzword-tags" class="buzzword"
-                            >태그1 태그2 태그3</span
-                        >
-                    </span>
-                    <div>
-                        <span
-                            id="buzzword_desc2"
-                            class="buzzword"
-                            style="display: none"
-                            >유행어에 대한 설명입니다 ㅎㅎ;</span
-                        >
-                    </div>
-                    <hr />
-                    <span
-                        class="buzzword-wrapper"
-                        onclick="if(buzzword_desc3.style.display == 'none')
-                    {buzzword_desc3.style.display = '';}
-                    else{buzzword_desc3.style.display = 'none';}"
-                    >
-                        <span id="buzzword-name" class="buzzword">제목</span>
-
-                        <span id="buzzword-tags" class="buzzword"
-                            >태그1 태그2 태그3</span
-                        >
-                    </span>
-                    <div>
-                        <span
-                            id="buzzword_desc3"
-                            class="buzzword"
-                            style="display: none"
-                            >유행어에 대한 설명입니다 ㅎㅎ;</span
-                        >
-                    </div>
-                    <hr />
-                </div>
+                <div id="buzzword-container" class="box"></div>
             </div>
+
+            <button class="button is-medium is-fullwidth" id="offset-button">
+                더 보기
+            </button>
         </div>
         <!-- footer -->
         <div id="footer-placeholder"></div>
